Wed Mar 18 22:27:36 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/GuidBuilder.h:
        * dds/DCPS/GuidBuilder.cpp:
        * dds/DCPS/RepoIdBuilder.h:
        * dds/DCPS/RepoIdBuilder.cpp:
        * dds/InfoRepo/RepoIdGenerator.cpp:
        * tests/DCPS/DCPSInfoRepo/publisher.cpp:
        * tests/DCPS/unit/Main.cpp:
        * tests/transport/dds_comparative/PubDriver.cpp:
        * tests/transport/dds_comparative/SubDriver.cpp:

          Added defaulting behavior to GuidBuilder/RepoIdBuilder (prevents
          junk initialization of GUID_t's).

Wed Mar 18 13:50:20 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/InfoRepo/RepoIdGenerator.cpp:

          Fixed header include order.  PCH include must come first in the cpp.

Wed Mar 18 13:39:33 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.h:
        * dds/DCPS/GuidBuilder.h:
        * dds/DCPS/GuidBuilder.cpp:
        * dds/DCPS/RepoIdBuilder.h:
        * dds/DCPS/RepoIdConverter.h:
        * dds/DCPS/RepoIdConverter.cpp:

          GCC and VC++ fixes to warnings/errors.

Wed Mar 18 05:08:43 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/BuiltInTopicUtils.h:
        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/GuidBuilder.h:
        * dds/DCPS/GuidBuilder.cpp:
        * dds/DCPS/GuidConverter.h:
        * dds/DCPS/GuidConverter.cpp:
        * dds/DCPS/GuidUtils.h:
        * dds/DCPS/GuidUtils.cpp:
        * dds/DCPS/RepoIdBuilder.h:
        * dds/DCPS/RepoIdBuilder.cpp:
        * dds/DCPS/RepoIdConverter.h:
        * dds/DCPS/RepoIdConverter.cpp:
        * dds/DdsDcpsGuid.idl:
        * dds/DdsDcpsInfo.idl:
        * dds/InfoRepo/DCPSInfo_i.h:
        * dds/InfoRepo/DCPSInfo_i.cpp:
        * dds/InfoRepo/DCPS_IR_Domain.h:
        * dds/InfoRepo/DCPS_IR_Domain.cpp:
        * dds/InfoRepo/RepoIdGenerator.h: